--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <input type="text" class="form-control bg-transparent text-white" name="s-letter" id="s-letter" maxlength="1" placeholder="Search by first letter">
       </div>
     </div>
-    <div class="meals row py-5 g-4"></div>
+    <div class="meals row py-5 g-4 ms-5"></div>
   </div>
 
   <div class="container"></div>
