--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
 
       <div class="col-md-12 text-center">
-      <button id="btn-register" class="btn btn-danger bg-transparent disabled" type="submit">Register</button>
+      <button id="btn-register" class="btn btn-danger bg-transparent" type="submit">Register</button>
       </div>
 
     </form>
