--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <i class="fa-solid fa-share-nodes d-block mb-4"></i>
           </div>
         </div>
-
       </div>
     </nav>
+
     <div class="search d-flex gap-4 justify-content-center pt-5 d-none">
       <div class="col-md-5 mb-3">
         <input type="text" class="form-control bg-transparent text-white" name="s-name" id="s-name" placeholder="Search by name">
@@ -58,75 +58,81 @@
     </div>
     <div class="meals row py-5 g-4 ms-5"></div>
 
-  <div class="contact row mt-md-5 pt-5 px-3 d-none">
-    <form class="row g-3 needs-validation" novalidate>
+    <div class="contact row mt-md-5 pt-5 px-3 d-none">
+      <form class="row g-3 needs-validation" novalidate>
 
-      <div class="col-md-6">
-        <input type="text" class="form-control" id="name" required placeholder="Enter your name">
-        <div class="valid-feedback">
-          Looks good!
+        <div class="col-md-6">
+          <input type="text" class="form-control" id="name" required placeholder="Enter your name">
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+          <div class="invalid-feedback">
+            Special characters and numbers not allowed
+          </div>                  
         </div>
-        <div class="invalid-feedback">
-          Special characters and numbers not allowed
-        </div>                  
+
+        <div class="col-md-6">
+          <input type="email" class="form-control" id="email" required placeholder="Enter your email">
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+          <div class="invalid-feedback">
+            Email not valid *exemple@yyy.zzz
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <input type="number" class="form-control" id="phone" required placeholder="Enter your phone">
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+          <div class="invalid-feedback">
+            Enter valid Phone Number
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <input type="password" class="form-control" id="password" required placeholder="Enter your password">
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+          <div class="invalid-feedback">
+            Enter valid password *Minimum eight characters, at least one letter and one number:*
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <input type="password" class="form-control" id="re-password" required placeholder="Repassword">
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+          <div class="invalid-feedback">
+            Please provide a Password.
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <input type="number" class="form-control" id="age" required placeholder="Age">
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+          <div class="invalid-feedback">
+            Enter your Age.
+          </div>
+        </div>
+
+        <div class="col-md-12 text-center">
+        <button id="btn-register" class="btn btn-danger bg-transparent" type="submit">Register</button>
+        </div>
+
+      </form>
+    </div>
+
+    <div class="loader position-fixed vh-100 vw-100 bg-dark d-none">
+      <div class="loader-flex d-flex justify-content-center align-items-center vh-100">
+        <div class="lds-facebook"><div></div><div></div><div></div></div>
       </div>
-
-      <div class="col-md-6">
-        <input type="email" class="form-control" id="email" required placeholder="Enter your email">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          Email not valid *exemple@yyy.zzz
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <input type="number" class="form-control" id="phone" required placeholder="Enter your phone">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          Enter valid Phone Number
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <input type="password" class="form-control" id="password" required placeholder="Enter your password">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          Enter valid password *Minimum eight characters, at least one letter and one number:*
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <input type="password" class="form-control" id="re-password" required placeholder="Repassword">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          Please provide a Password.
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <input type="number" class="form-control" id="age" required placeholder="Age">
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-        <div class="invalid-feedback">
-          Enter your Age.
-        </div>
-      </div>
-
-      <div class="col-md-12 text-center">
-      <button id="btn-register" class="btn btn-danger bg-transparent" type="submit">Register</button>
-      </div>
-
-    </form>
-  </div>
+    </div>
 
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
