--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </nav>
 
-    <div class="search d-flex gap-4 justify-content-center pt-5 d-none">
+    <div class="search d-flex gap-4 justify-content-center pt-5 d-none ms-5 ps-2">
       <div class="col-md-5 mb-3">
         <input type="text" class="form-control bg-transparent text-white" name="s-name" id="s-name" placeholder="Search by name">
       </div>
@@ -58,7 +58,7 @@
     </div>
     <div class="meals row py-5 g-4 ms-5"></div>
 
-    <div class="contact row mt-md-5 pt-5 px-3 d-none">
+    <div class="contact row mt-md-5 pt-5 px-3 ps-4 d-none ms-5">
       <form class="row g-3 needs-validation" novalidate>
 
         <div class="col-md-6">
